[tool.poetry]
name = "bunnyhop"
version = "0.1.0"
description = "A Python library created make building with BunnyCDN easier"
authors = ["Brian Jinwright"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/capless/bunnyhop"
repository = "https://github.com/capless/bunnyhop"
exclude = [".env"]
keywords = ["bunnycdn json db"]
classifiers = [
    "Python",
    "Python :: 3.6", 
    "Python :: 3.7", 
    "Python :: 3.8",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management"    
]
[tool.poetry.dependencies]
python = "^3.7"
valley = "^1.5.5"
envs = "^1.3"
requests = "^2.23.0"
pdoc = "^8.0.0"
tuspy = "^0.2.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
